Removed significant number of checkstyle warnings